--- a/namespace-Reloquent.html
+++ b/namespace-Reloquent.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>Overview</title>
+	<title>Namespace Reloquent</title>
 
 	<link rel="stylesheet" href="resources/bootstrap.min.css?973e37a8502921d56bc02bb55321f45b072b6f71">
 	<link rel="stylesheet" href="resources/style.css?49f43d3208c5d7e33fa16d36107a345bf11cc00d">
@@ -22,12 +22,12 @@
                     <input type="hidden" name="cx" value="">
                     <input type="hidden" name="ie" value="UTF-8">
                     <div class="form-group">
-                        <input type="text" name="q" class="search-query form-control" placeholder="Search" autofocus>
+                        <input type="text" name="q" class="search-query form-control" placeholder="Search">
 					</div>
 				</form>
 
 				<ul class="nav navbar-nav">
-					<li>
+					<li class="active">
 <span>Namespace</span>					</li>
 					<li>
 <span>Class</span>					</li>
@@ -47,7 +47,7 @@
 		<div id="groups">
 				<h3>Namespaces</h3>
 			<ul>
-					<li>
+					<li class="active">
 						<a href="namespace-Reloquent.html">
 							Reloquent<span></span>
 						</a>
@@ -68,16 +68,11 @@
 		<div id="elements">
 			<h3>Classes</h3>
 			<ul>
-				<li><a href="class-Reloquent.Commands.GenerateModel.html">Reloquent\Commands\GenerateModel</a></li>
-				<li><a href="class-Reloquent.Model.html">Reloquent\Model</a></li>
-				<li><a href="class-Reloquent.ReloquentClient.html">Reloquent\ReloquentClient</a></li>
-				<li><a href="class-Reloquent.ReloquentServiceProvider.html">Reloquent\ReloquentServiceProvider</a></li>
+				<li><a href="class-Reloquent.Model.html">Model</a></li>
+				<li><a href="class-Reloquent.ReloquentClient.html">ReloquentClient</a></li>
+				<li><a href="class-Reloquent.ReloquentServiceProvider.html">ReloquentServiceProvider</a></li>
 			</ul>
 
-			<h3>Interfaces</h3>
-			<ul>
-				<li><a href="class-Reloquent.Contracts.ReloquentClientContract.html">Reloquent\Contracts\ReloquentClientContract</a></li>
-			</ul>
 
 
 
@@ -90,24 +85,42 @@
 
 <div id="right">
 	<div id="rightInner">
-<div id="content">
-	<h1>Overview</h1>
+<div id="content" class="namespace">
+	<h1>Namespace Reloquent</h1>
+
+	<div class="panel panel-default">
+        <div class="panel-heading"><h2>Namespaces summary</h2></div>
+		<table class="summary table table-bordered table-striped" id="namespaces">
+		<tr>
+			<td class="name"><a href="namespace-Reloquent.Commands.html">Reloquent\Commands</a></td>
+		</tr>
+		<tr>
+			<td class="name"><a href="namespace-Reloquent.Contracts.html">Reloquent\Contracts</a></td>
+		</tr>
+		</table>
+	</div>
 
 
-		<div class="panel panel-default">
-            <div class="panel-heading"><h2>Namespaces summary</h2></div>
-			<table class="summary table table-bordered table-striped" id="namespaces">
-					<tr>
-						<td class="name"><a href="namespace-Reloquent.html">Reloquent</a></td>
-					</tr>
-					<tr>
-						<td class="name"><a href="namespace-Reloquent.Commands.html">Reloquent\Commands</a></td>
-					</tr>
-					<tr>
-						<td class="name"><a href="namespace-Reloquent.Contracts.html">Reloquent\Contracts</a></td>
-					</tr>
-			</table>
-		</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h2>Classes summary</h2></div>
+	<table class="summary table table-bordered table-striped" id="classes">
+<tr>
+	<td class="name"><a href="class-Reloquent.Model.html">Model</a></td>
+	<td></td>
+</tr>
+<tr>
+	<td class="name"><a href="class-Reloquent.ReloquentClient.html">ReloquentClient</a></td>
+	<td></td>
+</tr>
+<tr>
+	<td class="name"><a href="class-Reloquent.ReloquentServiceProvider.html">ReloquentServiceProvider</a></td>
+	<td></td>
+</tr>
+	</table>
+</div>
+
+
+
 
 
 </div>
